{{$NEXT}}

4.001     2018-04-21 19:29:24 EDT
  - Implement EXPERIMENTAL history method used for Minion Admin plugin history graph.

4.000     2018-04-16 14:58:35 EDT
  - Minion requirement bumped to 9.0.
  - Replace queue, state, and task options of list_jobs method with queues,
    states, and tasks options.
  - Replace name option of list_locks method with names option.
  - Replace key/value arguments of note method with a hash reference.
  - Add parents option to retry_job method.
  - Re-add active_locks stats field.

3.003     2017-12-10 16:00:33 EST
  - Remove active_locks stats field as it was incorrect.
  - Fix list_locks to exclude already expired locks.

3.002     2017-12-09 21:42:19 EST
  - Add list_locks method.
  - Add active_locks field to stats.

3.001     2017-11-28 21:57:15 EST
  - Fix condition in dequeue that could lead to calling usleep with a negative
    time. (toratora, #12)

3.000     2017-11-17 20:20:58 EST
  - Minion requirement bumped to 8.0.
  - Remove job_info and worker_info methods.
  - Support ids option and return total from list_jobs and list_workers methods.
  - Add uptime field to stats method (always undef for SQLite).

2.004     2017-11-11 16:17:27 EST
  - Add dequeue_interval attribute and check for jobs in 0.5 second intervals
    by default. (#10)

2.003     2017-08-07 16:04:18 EDT
  - Fix tests for rethrown job exceptions in Minion 7.05.

2.002     2017-08-05 12:01:08 EDT
  - Add id option to dequeue method to support dequeueing a specific job.
  - Add attempts option to retry_job method.

2.001     2017-07-20 02:40:46 EDT
  - Bump Mojo::SQLite requirement to 3.000 to support sharing the database
    connection cache with existing Mojo::SQLite objects.

2.000     2017-06-26 00:42:49 EDT
  - Add support for rate limiting and unique jobs with lock and unlock methods.
  - Add support for job metadata with note method, notes option for enqueue
    method, and notes field in job_info method.

1.000     2017-04-14 14:54:28 EDT